Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -26,3 +26,4 @@ stages:
         repository: 'kiranqot/azureTest'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
+        buildContext: 'https://gitlab.com/nanuchi/docker-in-1-hour.git'
